--- a/css/rehearseScript.css
+++ b/css/rehearseScript.css
@@ -29,7 +29,7 @@
 .actorLine {
 	display: table;
 	width: 600px;
-	height: 180px;
+	height: 220px;
 	margin: 0 auto;
 	font-size: 25px;
 }
@@ -52,11 +52,11 @@
 	position: absolute;
 	background-color: #be9ad3;
 	width: 300px;
-	height: 100px;
+	height: 80px;
 	padding: 10px;
 	margin-left: 28%;
 	cursor: pointer;
-	padding-top: 30px;
+	padding-top: 20px;
 	border-radius: 10px;
 	text-align: center;
 	font-size: 30px;	
@@ -69,7 +69,7 @@
 .actions {
 	width: 400px;
 	margin: 0 auto;
-	margin-top: 170px;	
+	margin-top: 130px;	
 }
 
 .nextLine{
