--- a/css/scriptMenu.css
+++ b/css/scriptMenu.css
@@ -65,7 +65,6 @@ input[type=file] {
 #playName {
     width:50%; 
     font-size: 20px;
-    font-family: 'Lato'
     font-weight: bold;
 }
 
